@@ -1,1 +1,0 @@
-bin/unit2 @PREFIX@/bin/unit2-@PYVERSSUFFIX@
