@@ -1,6 +1,0 @@
-Unittest2 is a backport of the new features added to the unittest testing
-framework in Python 2.7 and onwards. It is tested to run on Python 2.6, 2.7,
-3.2, 3.3, 3.4 and pypy.
-
-To use unittest2 instead of unittest simply replace ''import unittest'' with
-''import unittest2''.
