@@ -1,99 +1,0 @@
-@comment $NetBSD: PLIST,v 1.4 2014/12/13 08:36:03 obache Exp $
-bin/unit2-${PYVERSSUFFIX}
-${PYSITELIB}/${EGG_INFODIR}/PKG-INFO
-${PYSITELIB}/${EGG_INFODIR}/SOURCES.txt
-${PYSITELIB}/${EGG_INFODIR}/dependency_links.txt
-${PYSITELIB}/${EGG_INFODIR}/entry_points.txt
-${PYSITELIB}/${EGG_INFODIR}/requires.txt
-${PYSITELIB}/${EGG_INFODIR}/top_level.txt
-${PYSITELIB}/unittest2/__init__.py
-${PYSITELIB}/unittest2/__init__.pyc
-${PYSITELIB}/unittest2/__init__.pyo
-${PYSITELIB}/unittest2/__main__.py
-${PYSITELIB}/unittest2/__main__.pyc
-${PYSITELIB}/unittest2/__main__.pyo
-${PYSITELIB}/unittest2/case.py
-${PYSITELIB}/unittest2/case.pyc
-${PYSITELIB}/unittest2/case.pyo
-${PYSITELIB}/unittest2/collector.py
-${PYSITELIB}/unittest2/collector.pyc
-${PYSITELIB}/unittest2/collector.pyo
-${PYSITELIB}/unittest2/compatibility.py
-${PYSITELIB}/unittest2/compatibility.pyc
-${PYSITELIB}/unittest2/compatibility.pyo
-${PYSITELIB}/unittest2/loader.py
-${PYSITELIB}/unittest2/loader.pyc
-${PYSITELIB}/unittest2/loader.pyo
-${PYSITELIB}/unittest2/main.py
-${PYSITELIB}/unittest2/main.pyc
-${PYSITELIB}/unittest2/main.pyo
-${PYSITELIB}/unittest2/result.py
-${PYSITELIB}/unittest2/result.pyc
-${PYSITELIB}/unittest2/result.pyo
-${PYSITELIB}/unittest2/runner.py
-${PYSITELIB}/unittest2/runner.pyc
-${PYSITELIB}/unittest2/runner.pyo
-${PYSITELIB}/unittest2/signals.py
-${PYSITELIB}/unittest2/signals.pyc
-${PYSITELIB}/unittest2/signals.pyo
-${PYSITELIB}/unittest2/suite.py
-${PYSITELIB}/unittest2/suite.pyc
-${PYSITELIB}/unittest2/suite.pyo
-${PYSITELIB}/unittest2/test/__init__.py
-${PYSITELIB}/unittest2/test/__init__.pyc
-${PYSITELIB}/unittest2/test/__init__.pyo
-${PYSITELIB}/unittest2/test/_test_unittest2_with.py
-${PYSITELIB}/unittest2/test/_test_unittest2_with.pyc
-${PYSITELIB}/unittest2/test/_test_unittest2_with.pyo
-${PYSITELIB}/unittest2/test/dummy.py
-${PYSITELIB}/unittest2/test/dummy.pyc
-${PYSITELIB}/unittest2/test/dummy.pyo
-${PYSITELIB}/unittest2/test/support.py
-${PYSITELIB}/unittest2/test/support.pyc
-${PYSITELIB}/unittest2/test/support.pyo
-${PYSITELIB}/unittest2/test/test_assertions.py
-${PYSITELIB}/unittest2/test/test_assertions.pyc
-${PYSITELIB}/unittest2/test/test_assertions.pyo
-${PYSITELIB}/unittest2/test/test_break.py
-${PYSITELIB}/unittest2/test/test_break.pyc
-${PYSITELIB}/unittest2/test/test_break.pyo
-${PYSITELIB}/unittest2/test/test_case.py
-${PYSITELIB}/unittest2/test/test_case.pyc
-${PYSITELIB}/unittest2/test/test_case.pyo
-${PYSITELIB}/unittest2/test/test_discovery.py
-${PYSITELIB}/unittest2/test/test_discovery.pyc
-${PYSITELIB}/unittest2/test/test_discovery.pyo
-${PYSITELIB}/unittest2/test/test_functiontestcase.py
-${PYSITELIB}/unittest2/test/test_functiontestcase.pyc
-${PYSITELIB}/unittest2/test/test_functiontestcase.pyo
-${PYSITELIB}/unittest2/test/test_loader.py
-${PYSITELIB}/unittest2/test/test_loader.pyc
-${PYSITELIB}/unittest2/test/test_loader.pyo
-${PYSITELIB}/unittest2/test/test_new_tests.py
-${PYSITELIB}/unittest2/test/test_new_tests.pyc
-${PYSITELIB}/unittest2/test/test_new_tests.pyo
-${PYSITELIB}/unittest2/test/test_program.py
-${PYSITELIB}/unittest2/test/test_program.pyc
-${PYSITELIB}/unittest2/test/test_program.pyo
-${PYSITELIB}/unittest2/test/test_result.py
-${PYSITELIB}/unittest2/test/test_result.pyc
-${PYSITELIB}/unittest2/test/test_result.pyo
-${PYSITELIB}/unittest2/test/test_runner.py
-${PYSITELIB}/unittest2/test/test_runner.pyc
-${PYSITELIB}/unittest2/test/test_runner.pyo
-${PYSITELIB}/unittest2/test/test_setups.py
-${PYSITELIB}/unittest2/test/test_setups.pyc
-${PYSITELIB}/unittest2/test/test_setups.pyo
-${PYSITELIB}/unittest2/test/test_skipping.py
-${PYSITELIB}/unittest2/test/test_skipping.pyc
-${PYSITELIB}/unittest2/test/test_skipping.pyo
-${PYSITELIB}/unittest2/test/test_suite.py
-${PYSITELIB}/unittest2/test/test_suite.pyc
-${PYSITELIB}/unittest2/test/test_suite.pyo
-${PYSITELIB}/unittest2/test/test_unittest2_with.py
-${PYSITELIB}/unittest2/test/test_unittest2_with.pyc
-${PYSITELIB}/unittest2/test/test_unittest2_with.pyo
-${PYSITELIB}/unittest2/util.py
-${PYSITELIB}/unittest2/util.pyc
-${PYSITELIB}/unittest2/util.pyo
-${DOCDIR}/README.txt
