@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2022,v 1.2205 2022/05/01 08:03:53 wiz Exp $
+$NetBSD: CHANGES-2022,v 1.2206 2022/05/01 09:23:25 wiz Exp $
 
 Changes to the packages collection and infrastructure in 2022:
 
@@ -3473,3 +3473,4 @@ Changes to the packages collection and infrastructure in 2022:
 	Removed devel/py-testtools24 [wiz 2022-05-01]
 	Removed net/py-google [wiz 2022-05-01]
 	Removed net/py-soappy [wiz 2022-05-01]
+	Removed devel/py-unittest2 [wiz 2022-05-01]
